--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@angular/platform-browser-dynamic": "8.0.1",
     "@angular/router": "8.0.1",
     "core-js": "2.5.4",
+    "nodejs": "0.0.0",
     "rxjs": "6.5.2",
     "tslib": "1.9.0",
     "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.3",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "8.0.3",
     "@angular/compiler-cli": "8.0.1",
     "@angular/language-service": "8.0.1",
